# Dna-project

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  dna  dna.cbp  main.cpp  makefile  myDna.txt  untitled1.cbp  untitled2.cbp
controller/: Command.cpp  Command.h  Controller.cpp  Controller.h  FactoryCommand.cpp  FactoryCommand.h  Load.cpp  Load.h  New.cpp  New.h  Save.cpp  Save.h  Show.cpp  Show.h
model/: DnaData.cpp  DnaData.h  DnaMetaData.cpp  DnaMetaData.h  DnaReaderText.cpp  DnaReaderText.h  DnaSequence.cpp  DnaSequence.h  DnaWriter.cpp  DnaWriter.h  Idna.h  Nucleotide.cpp  Nucleotide.h
view/: Cmd.cpp  Cmd.h  CommandParser.cpp  CommandParser.h  UI.h
